Add initial configuration and setup for Docker and DNS services
- Create ansible.cfg for Ansible configuration
- Add .gitignore for keys directory
- Implement management script with command registry for various tasks
- Define inventory for DNS and Nebula clusters
- Remove old hosts.yml and justfile
- Add Docker installation tasks to Ansible role
- Update DNS server setup playbook to include Docker role
- Create setup for Nebula cluster with Docker Swarm initialization
- Add .gitignore for services directory
- Define Caddy service with Docker Compose and configuration

--- a/metal/roles/ssh_key/tasks/main.yml
+++ b/metal/roles/ssh_key/tasks/main.yml
@@ -2,7 +2,7 @@
 # Generate an SSH key on the control node if not already existing.
 - name: Ensure SSH key exists on control node for this server
   openssh_keypair:
-    path: "./keys/astro_id_rsa"
+    path: "../keys/astro_id_rsa"
     type: rsa
     size: 4096
     force: no
