fix(apps): fix loadbalancer and tls config so that ingresses will actually work

--- a/apps/system/cert-manager/kustomization.yaml
+++ b/apps/system/cert-manager/kustomization.yaml
@@ -5,12 +5,16 @@ secretGenerator:
     envs:
       - .env.secret
 
+generatorOptions:
+  disableNameSuffixHash: true
+
 resources:
   - https://github.com/cert-manager/cert-manager/releases/download/v1.16.5/cert-manager.yaml
   - issuer.yaml
   - porkbun-webhook/rbac.yaml
   - extension-apiserver-authentication-reader.yaml
   - porkbun-webhook-auth-reader.yaml
+  - rbac.yaml
 
 helmGlobals:
   chartHome: porkbun-webhook/deploy
