--- a/apps/system/metallb/address-pool.yaml
+++ b/apps/system/metallb/address-pool.yaml
@@ -1,8 +1,17 @@
 apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
 metadata:
-  name: nebula-ip-pool
+  name: public-pool
   namespace: metallb-system
 spec:
   addresses:
     - 192.168.1.225-192.168.1.250
+---
+apiVersion: metallb.io/v1beta1
+kind: L2Advertisement
+metadata:
+  name: public-l2-advertisement
+  namespace: metallb-system
+spec:
+  ipAddressPools:
+  - public-pool
