--- a/apps/system/pocket-id/configMap.yaml
+++ b/apps/system/pocket-id/configMap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  PUBLIC_APP_URL: https://auth.quiet.ooo
+  APP_URL: https://auth.quiet.ooo
   TRUST_PROXY: "true"
   ORIGIN: https://auth.quiet.ooo
   PROTOCOL_HEADER: x-forwarded-proto
