--- a/stacks/nebula03/immich/docker-compose.yml
+++ b/stacks/nebula03/immich/docker-compose.yml
@@ -16,9 +16,9 @@ services:
     networks:
       - default
       - caddy
-    # extends:
-    #   file: hwaccel.transcoding.yml
-    #   service: cpu # set to one of [nvenc, quicksync, rkmpp, vaapi, vaapi-wsl] for accelerated transcoding
+    extends:
+      file: hwaccel.transcoding.yml
+      service: vaapi # set to one of [nvenc, quicksync, rkmpp, vaapi, vaapi-wsl] for accelerated transcoding
     ports:
       - "2283:2283" # Change this port if you want to use a different one
     volumes:
