add swingmusic and syncthing

--- a/stacks/dns1.quiet.ooo/caddy/caddy_conf/Caddyfile
+++ b/stacks/dns1.quiet.ooo/caddy/caddy_conf/Caddyfile
@@ -15,7 +15,7 @@ vod2pod.quiet.ooo {
     reverse_proxy 192.168.1.50
 }
 
-photos.quiet.ooo {
+photos.quiet.ooo, syncthing.quiet.ooo, music.quiet.ooo {
     reverse_proxy 192.168.1.52
 }
 
